I've now tested and added a different string formatting bit to test how I can resolve the outdated warnings.